# libcper

./: .clang-tidy  .gitignore  CMakeLists.txt  OWNERS  README.md  base64.c  base64.h  common-utils.c  common-utils.h  cper-parse-str.h  cper-parse.c  cper-parse.h  cper-parse.i  cper-test.c  cper-utils.c  cper-utils.h  cper.generated.json  ir-parse.c  json-parse.c  json-schema.c  json-schema.h  meson.build  meson.options
cli-app/: cper-convert.c
docs/: GeneratorExtensions.md  OEMExtensions.md
edk/: BaseTypes.h  Cper.c  Cper.h
generator/: README.md  cper-generate-cli.c  cper-generate.c  cper-generate.h  gen-utils.c  gen-utils.h
generator/sections/: gen-section-arm.c  gen-section-ccix-per.c  gen-section-cxl-component.c  gen-section-cxl-protocol.c  gen-section-dmar.c  gen-section-firmware.c  gen-section-generic.c  gen-section-generic.h  gen-section-ia32x64.c  gen-section-ia32x64.h  gen-section-memory.c  gen-section-nvidia.c  gen-section-pci-bus.c  gen-section-pci-dev.c  gen-section-pcie.c  gen-section.c  gen-section.h  gen-sections.h
sections/: cper-section-arm.c  cper-section-arm.h  cper-section-ccix-per.c  cper-section-ccix-per.h  cper-section-cxl-component.c  cper-section-cxl-component.h  cper-section-cxl-protocol.c  cper-section-cxl-protocol.h  cper-section-dmar-generic.c  cper-section-dmar-generic.h  cper-section-dmar-iommu.c  cper-section-dmar-iommu.h  cper-section-dmar-vtd.c  cper-section-dmar-vtd.h  cper-section-firmware.c  cper-section-firmware.h  cper-section-generic.c  cper-section-generic.h  cper-section-ia32x64.c  cper-section-ia32x64.h  cper-section-ipf.c  cper-section-ipf.h  cper-section-memory.c  cper-section-memory.h  cper-section-nvidia.c  cper-section-nvidia.h  cper-section-pci-bus.c  cper-section-pci-bus.h  cper-section-pci-dev.c  cper-section-pci-dev.h  cper-section-pcie.c  cper-section-pcie.h  cper-section.c  cper-section.h
specification/: cper-json-specification.tex
specification/document/: cper-json-specification.tex
specification/json/: cper-json-full-log.json  cper-json-header.json  cper-json-section-descriptor.json  cper-json-section-log.json  cper-json.json
specification/json/common/: cper-json-error-status.json  cper-json-nvp.json
specification/json/sections/: cper-arm-processor.json  cper-ccix-per.json  cper-cxl-component.json  cper-cxl-protocol.json  cper-firmware.json  cper-generic-dmar.json  cper-generic-processor.json  cper-ia32x64-processor.json  cper-iommu-dmar.json  cper-memory.json  cper-memory2.json  cper-nvidia.json  cper-pci-bus.json  cper-pci-component.json  cper-pcie.json  cper-unknown.json  cper-vtd-dmar.json
subprojects/: json-c.wrap  libb64.wrap
testing/: cper-convert.c  cper-test.c
tests/: base64_test.cpp  ir-tests.cpp  meson.build  test-utils.cpp  test-utils.hpp
